footer main gap issues solve

--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ a:hover {
 	grid-template-columns: auto auto auto auto;
 	justify-content: center;
 	align-items: center;
+	gap: 20px;
 	
 }
 .footer-main a{
